docs(docs-infra): Fix toggle button in dark mode Fix visibility toggle button in dark mode
Fix #66049

(cherry picked from commit 71149ef57ad8531cbc9b7e33a636e16370a58467)

--- a/adev/src/content/examples/animations/src/app/enter-and-leave/enter-binding.css
+++ b/adev/src/content/examples/animations/src/app/enter-and-leave/enter-binding.css
@@ -26,3 +26,12 @@
     transform: translateY(0);
   }
 }
+
+.toggle-btn {
+  background: transparent;
+  border: 1px solid var(--primary-contrast, black);
+  color: var(--primary-contrast, black);
+  padding: 10px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+}
